fix: move scroll label even higher on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1753,7 +1753,7 @@ body {
     }
     
     .hero__scroll {
-        bottom: 120px;
+        bottom: 180px;
         right: 20px;
     }
     
